--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h2 {
 #mainSubtitle {
   margin: 0;
   padding: 0;
-  margin-left: 1em;
+  margin-left: 1.4em;
   margin-top: 1.4em;
   width: 17em;
 }
@@ -40,13 +40,15 @@ h2 {
 
 #small_mult_chart_descript_cont {
   position: relative;
-  left: 48.5em;
-  top: -46.5em;
+  left: 49.5em;
+  top: -45.5em;
 }
 
 #small_mult_chart_descript {
-  width: 15.5em;
+  width: 23em;
   opacity: 0;
+  font-size: 1.2em;
+  line-height: 180%;
 }
 
 #bottom_descript_cont {
