--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,13 @@ h2 {
   top: -42em;
 }
 
-#bottom_descript {
+#bottom_descript1 {
+opacity: 0;
+font-size: 1.2em;
+line-height: 180%;
+}
+
+#bottom_descript2 {
 opacity: 0;
 font-size: 1.2em;
 line-height: 180%;
