fix font ordering

--- a/style/styles.css
+++ b/style/styles.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: lightgrey;
-  font-family: sans-serif, Arial, Helvetica;
+  font-family: Arial, Helvetica, sans-serif ;
 }
 
 h1 {
