--- a/style/styles.css
+++ b/style/styles.css
@@ -3,10 +3,41 @@
 body {
   background-color: lightgrey;
   font-family: Arial, Helvetica, sans-serif ;
+  padding: 3em;
+  margin: 0
+}
+
+#panel1 {
+  background-color: green;
+}
+
+#titles {
+  background-color: yellow;
+  display: inline-block;
+}
+
+#mainChart {
+  background-color: orange;
+  display: inline-block;
+  background-color: purple;
+  margin-left: 12.5%;
+  margin-top: -25%;
+}
+
+#main_chart_area_cont {
+
+  margin: 0 auto;
+  background-color: blue;
+}
+
+main_chart_area {
+  background-color: brown;
 }
 
 h1 {
   font-size: 9.8em;
+  margin: 0;
+  padding: 0;
 }
 
 p {
