--- a/style/styles.css
+++ b/style/styles.css
@@ -37,6 +37,21 @@ p {
   font-size: 2.5em;
 }
 
+#small_mult_table_cont {
+  background-color: green;
+  width: 100%;
+  text-align: center;
+  margin: 5em;
+}
+
+.item {
+  display: inline-block;
+}
+
+.row {
+  display: block;
+}
+
 .small_mult_chart_descript1 {
   width: 23em;
   opacity: 0;
