--- a/style/styles.css
+++ b/style/styles.css
@@ -1,7 +1,7 @@
 /* style sheet */
 
 body {
-  background-color: lightgrey;
+  background-color: rgb(164,198,253);
   font-family: Arial, Helvetica, sans-serif;
   padding: 2.5em;
 }
