--- a/style/styles.css
+++ b/style/styles.css
@@ -6,6 +6,11 @@ body {
   padding: 2.5em;
 }
 
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 h1 {
   font-size: 6em;
   margin: 0;
