--- a/style/styles.css
+++ b/style/styles.css
@@ -45,7 +45,12 @@ p {
 }
 
 .smallMultChartDescr {
-  font-size: 2em;
+  font-size: 1.5em;
+  line-height: 1em;
+}
+
+.sourceNote {
+  font-size: 1.2em;
   line-height: 1.2em;
 }
 
